@@ -2983,8 +2983,9 @@ _ecore_evas_x_flush_pre(void *data, Evas *e __UNUSED__, void *event_info __UNUSE
              ee->engine.x.sync_val++;
              if (!ee->engine.x.sync_cancel)
                {
-                  ecore_x_sync_counter_val_wait(ee->engine.x.sync_counter,
-                                                ee->engine.x.sync_val);
+                  if (!ee->semi_sync)
+                     ecore_x_sync_counter_val_wait(ee->engine.x.sync_counter,
+                                                   ee->engine.x.sync_val);
                }
           }
      }
@@ -3436,7 +3437,8 @@ ecore_evas_gl_x11_options_new(const char *disp_name, Ecore_X_Window parent,
    ee->engine.func = (Ecore_Evas_Engine_Func *)&_ecore_x_engine_func;
 
    ee->driver = "opengl_x11";
-   ee->no_comp_sync = 1; // gl engine doesnt need to sync - its whole swaps
+   ee->semi_sync = 1; // gl engine doesnt need to sync - its whole swaps
+//   ee->no_comp_sync = 1; // gl engine doesnt need to sync - its whole swaps
    if (disp_name) ee->name = strdup(disp_name);
 
    if (w < 1) w = 1;
